--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
         width: 100%;
         margin: 0 auto;
       }
+      .leaflet-control-zoom,
+      .leaflet-control-attribution {
+        display: none;
+      }
   </style>
   </head>
   <body>
